[package]
description = "A Gameboy Advance Emulator (WIP)"
name = "rusty-boy-advance"
documentation = "https://nico-abram.github.io/rusty-boy-advance/doc/rgba/"
repository = "https://github.com/nico-abram/rusty-boy-advance"
version = "0.0.0"
authors = ["Nicolas <abramlujan@gmail.com>"]
edition = "2018"

readme = "README.md"
keywords = ["emulator", "gba", "game-boy"]
categories = ["emulators"]
license = "MIT"

[dependencies]
clap = "2.33.0"
byteorder = "1.3.2"
beryllium = "0.0.13"
#glium = "0.23"
#imgui = "0.0.23"
#imgui-glium-renderer = "0.0.23"
#imgui-winit-support = "0.0.23"
#image = "0.21.2"

[badges]
travis-ci = { repository = "nico-abram/rusty-boy-advance", branch = "master" }
maintenance = { status = "actively-developed" }