[workspace]
members = [
    "rusty-boy-advance-beryllium",
    "rusty-boy-advance",
    #"rusty-boy-advance-quicksilver",
    "rusty-boy-advance-imgui",
]

[profile.release]
debug = true

[profile.dev]
opt-level = 1 # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
debug-assertions = false
lto = false
incremental = true
