[package]
description = "A Gameboy Advance Emulator (WIP)"
name = "rusty-boy-advance-beryllium"
documentation = "https://nico-abram.github.io/rusty-boy-advance-beryllium/"
repository = "https://github.com/nico-abram/rusty-boy-advance"
version = "0.0.2"
authors = ["Nicolas <abramlujan@gmail.com>"]
edition = "2018"

readme = "README.md"
keywords = ["emulator", "gba", "game-boy"]
categories = ["emulators"]
license = "MIT"
publish = false

#default-run = "rusty-boy-advance-beryllium"

[dependencies]
rusty-boy-advance = { path = "../rusty-boy-advance" }
clap = { git = "https://github.com/clap-rs/clap", branch = "v3-master" }
beryllium = "0.0.13"

[target.'cfg(linux)'.dependencies.beryllium]
version = "0.0.13"
features = ["dynamic_link"]