[package]
description = "A Gameboy Advance Emulator (WIP)"
name = "rusty-boy-advance-imgui"
documentation = "https://nico-abram.github.io/rusty-boy-advance-imgui/"
repository = "https://github.com/nico-abram/rusty-boy-advance"
version = "0.0.2"
authors = ["Nicolas <abramlujan@gmail.com>"]
edition = "2018"

readme = "README.md"
keywords = ["emulator", "gba", "game-boy"]
categories = ["emulators"]
license = "MIT"
publish = false

[dependencies]
rusty-boy-advance = { path = "../rusty-boy-advance" }
glium = { version = "0.25", default-features = true }
imgui = { version = "0.1.0-pre"}
imgui-glium-renderer = { version = "0.1.0-pre"}
imgui-winit-support = { version = "0.1.0-pre" }
image = "0.21"
nfd = "0.0.4"