[package]
description = "A Gameboy Advance Emulator (WIP)"
name = "rusty-boy-advance-imgui"
documentation = "https://nico-abram.github.io/rusty-boy-advance-imgui/"
repository = "https://github.com/nico-abram/rusty-boy-advance"
version = "0.0.2"
authors = ["Nicolas <abramlujan@gmail.com>"]
edition = "2018"

readme = "README.md"
keywords = ["emulator", "gba", "game-boy"]
categories = ["emulators"]
license = "MIT"
publish = false

[dependencies]
rusty-boy-advance = { path = "../rusty-boy-advance" }
glium =  "0.25"
imgui =  "0.1.0"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.1.0"
nfd = "0.0.4"
capstone = "0.6.0"