[package]
description = "A Gameboy Advance Emulator (WIP)"
name = "rusty-boy-advance-imgui"
documentation = "https://nico-abram.github.io/rusty-boy-advance-imgui/"
repository = "https://github.com/nico-abram/rusty-boy-advance"
version = "0.0.2"
authors = ["Nicolas <abramlujan@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["emulator", "gba", "game-boy"]
categories = ["emulators"]
license = "MIT"
publish = false

[dependencies]
copypasta = "0.10.1"
rusty-boy-advance = { path = "../rusty-boy-advance" }
glium = { version = "0.34.0", default-features = true }
#glutin = "0.32.1"
glutin = "0.31.3"
raw-window-handle = "0.5.2"
glutin-winit = "0.4.2"
imgui = { version = "0.12.0", features = ["docking", "tables-api"] }
imgui-glium-renderer = "0.12.0"
imgui-winit-support = "0.12.0"
nfd = "0.0.4"
